# django-template-breakpoint

./: LICENSE  README.md  pyproject.toml  test_breakpoint.py
django_template_breakpoint/: __init__.py
django_template_breakpoint/templatetags/: breakpoint.py
